etc/tests/fuzz/errors/type/inferred-comparison-param.nshape
shape type-inferred-comparison-param {
  family "compiler-errors/type"
  generator "error"
  features ["error", "type", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "cannot assign string literal to int"
  source ny <<'NY'
use std.core

fn small(x) {
   x < 10
}

print(small("x"))
NY
}
